; ModuleID = '/home/carl/AnghaBench/tmux/extr_input.c_input_reset_cell.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_input.c_input_reset_cell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i64, i32 }
%struct.input_ctx = type { i64, i64, %struct.TYPE_3__, i32 }

@grid_default_cell = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.input_ctx*)* @input_reset_cell to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @input_reset_cell(%struct.input_ctx* %0) #0 {
  %2 = alloca %struct.input_ctx*, align 8
  store %struct.input_ctx* %0, %struct.input_ctx** %2, align 8
  %3 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %4 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %3, i32 0, i32 2
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 3
  %6 = call i32 @memcpy(i32* %5, %struct.TYPE_3__* @grid_default_cell, i32 4)
  %7 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %8 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %7, i32 0, i32 2
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 2
  store i64 0, i64* %9, align 8
  %10 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %11 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %10, i32 0, i32 2
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  %13 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %14 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %13, i32 0, i32 2
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  store i64 0, i64* %15, align 8
  %16 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %17 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %16, i32 0, i32 3
  %18 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %19 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %18, i32 0, i32 2
  %20 = call i32 @memcpy(i32* %17, %struct.TYPE_3__* %19, i32 4)
  %21 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %22 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %21, i32 0, i32 1
  store i64 0, i64* %22, align 8
  %23 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %24 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %23, i32 0, i32 0
  store i64 0, i64* %24, align 8
  ret void
}

declare dso_local i32 @memcpy(i32*, %struct.TYPE_3__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
